# splat-API

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.compile  README.md  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  pyproject.toml  signalserver  vite.config.ts
.github/workflows/: docker-build.yml
app/: main.py
app/models/: CoveragePredictionRequest.py
app/services/: splat.py
app/ui/: index.html
app/ui/assets/: index-Bi1Tp14p.js  index-BlHXZs0g.js  index-CXAPPi4f.js  index-DuFyOYO3.js  index-ESdu6ue-.css
src/: App.vue  store.ts  types.ts
src/components/: Display.vue  Environment.vue  Receiver.vue  Simulation.vue  Transmitter.vue
utils/: generate_colorbars.py
