[project]
name = "splat-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "numpy>=2.4.3",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "rasterio>=1.5.0",
    "requests>=2.32.5",
    "uvicorn>=0.42.0",
]
